--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+.lock-waf_darwin_build
+node_modules
