Use "basalt" target for now

--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "sdkVersion": "3",
     "enableMultiJS": true,
     "targetPlatforms": [
-      "basalt",
-      "chalk",
-      "diorite"
+      "basalt"
     ],
     "watchapp": {
       "watchface": false
